--- a/index.html
+++ b/index.html
@@ -544,7 +544,110 @@
             </li>
           </ul>
         </div>
+
+        <div class="">
+          <p class="footer-social-p">Subscribe</p>
+          <form class="form-footer">
+            <label class="form-footer-label" for="footer-input-email">
+              <input
+                class="form-footer-input"
+                name="input-email"
+                id="footer-input-email"
+                type="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="footer-btn" type="submit">
+              Subscribe
+              <svg class="footer-send" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+    <div class="backdrop">
+      <div class="modal">
+        <button type="button" class="modal-close-btn">
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="form-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="form-field-modal">
+            <label class="form-label" for="input-name">Name</label>
+            <div class="input-wrapper">
+              <input
+                class="form-input"
+                name="input-name"
+                id="input-name"
+                type="text"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-field-modal">
+            <label class="form-label" for="input-phone">Phone</label>
+            <div class="input-wrapper">
+              <input
+                class="form-input"
+                name="input-phone"
+                id="input-phone"
+                type="text"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-field-modal">
+            <label class="form-label" for="input-email">Email</label>
+            <div class="input-wrapper">
+              <input
+                class="form-input"
+                name="input-email"
+                id="input-email"
+                type="email"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-field-modal last-textarea">
+            <label class="form-label" for="user-text">Comment</label>
+            <textarea
+              class="form-textarea"
+              name="user-text"
+              placeholder="Text input"
+              id="user-text"
+            ></textarea>
+          </div>
+          <div class="form-field-modal checkbox">
+            <input
+              class="modal-check visually-hidden"
+              type="checkbox"
+              name="modal-check"
+              id="modal-check"
+              value="true"
+            />
+            <label class="check-text" for="modal-check">
+              <span class="check-element">
+                <svg class="check-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-chek"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="check-text-link" href="">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="form-btn" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
