--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
           </ul>
         </div>
 
-        <div class="">
+        <div class="footer-form">
           <p class="footer-social-p">Subscribe</p>
           <form class="form-footer">
             <label class="form-footer-label" for="footer-input-email">
