--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg class="modal-close-icon" width="8" height="8">
@@ -577,12 +577,12 @@
         <p class="form-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <div class="form-field-modal">
-            <label class="form-label" for="input-name">Name</label>
+            <label class="form-label" for="user-name">Name</label>
             <div class="input-wrapper">
               <input
                 class="form-input"
-                name="input-name"
-                id="input-name"
+                name="user-name"
+                id="user-name"
                 type="text"
               />
               <svg class="form-icon" width="18" height="24">
@@ -619,23 +619,23 @@
             </div>
           </div>
           <div class="form-field-modal last-textarea">
-            <label class="form-label" for="user-text">Comment</label>
+            <label class="form-label" for="user-comment">Comment</label>
             <textarea
               class="form-textarea"
-              name="user-text"
+              name="user-comment"
               placeholder="Text input"
-              id="user-text"
+              id="user-comment"
             ></textarea>
           </div>
           <div class="form-field-modal checkbox">
             <input
               class="modal-check visually-hidden"
               type="checkbox"
-              name="modal-check"
-              id="modal-check"
+              name="user-privacy"
+              id="user-privacy"
               value="true"
             />
-            <label class="check-text" for="modal-check">
+            <label class="check-text" for="user-privacy">
               <span class="check-element">
                 <svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-chek"></use>
